--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -41,7 +41,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 # Create non-root user
 RUN useradd -m -u 1000 django && \
-    mkdir -p /app /app/staticfiles /app/media /app/logs && \
+    mkdir -p /app /app/staticfiles /app/media /app/logs /app/static && \
     chown -R django:django /app
 
 # Set working directory
