Fix: Auto-fix volume permissions on container startup

--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -33,10 +33,11 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     DJANGO_SETTINGS_MODULE=config.settings.production
 
-# Install runtime dependencies
+# Install runtime dependencies including su-exec
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq-dev \
     curl \
+    su-exec \
     && rm -rf /var/lib/apt/lists/*
 
 # Create non-root user
@@ -55,11 +56,8 @@ COPY --from=builder /usr/local/bin /usr/local/bin
 COPY --chown=django:django . /app/
 
 # Copy and set permissions for entrypoint script
-COPY --chown=django:django docker-entrypoint.sh /app/
+COPY docker-entrypoint.sh /app/
 RUN chmod +x /app/docker-entrypoint.sh
-
-# Switch to non-root user
-USER django
 
 # Expose port
 EXPOSE 8000
