last commit before refactor

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -20,10 +20,12 @@ RUN apt-get update && apt-get install -y \
 # Copy requirements files
 COPY requirements/base.txt requirements/base.txt
 COPY requirements/production.txt requirements/production.txt
+COPY requirements/development.txt requirements/development.txt
 
 # Install Python dependencies
 RUN pip install --upgrade pip && \
-    pip install -r requirements/production.txt
+    pip install -r requirements/production.txt && \
+    pip install django-extensions==3.2.3
 
 # Copy project files
 COPY . .
